src/components/List.css
.foodListItems {
  height: 75px;
  width: 75px;
  letter-spacing: 1px;
  box-shadow: 1px 1px 1px 1px #161515;
  cursor: pointer;
  list-style: none;
  background-color: #709094;
  border: 1.2px solid #635a6b;
  font-size: small;
  text-transform: uppercase;
  border-radius: 25px;
  margin:auto
  /*text-align: center;
  vertical-align: middle;
  display: table;*/
}

